<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:id="@+id/main"
    tools:context=".activites.NoInternetActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_internet" />

        <TextView
            android:id="@+id/textDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/you_re_offline"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/check_your_internet_connection_amp_try_again"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/retryBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/gradient_btn"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/rubik_medium"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingBottom="@dimen/_1sdp"
            android:text="@string/Retry"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
</RelativeLayout>