<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_5sdp"
    app:cardCornerRadius="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/red"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/delete">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/are_you_sure_you_want_to_delete_it">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/cancel"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"
                android:id="@+id/cancel_btn"
                android:includeFontPadding="false"
                android:backgroundTint="@color/gray"
                android:layout_weight="1"
                android:background="@drawable/delete_btn_bg"
                android:fontFamily="@font/rubik_regular"
                android:textColor="@color/black"
               >
            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/delete"
                android:textSize="@dimen/_12ssp"
                android:id="@+id/delete_btn"
                android:layout_marginEnd="30dp"
                android:includeFontPadding="false"
                android:layout_weight="1"
                android:background="@drawable/delete_btn_bg"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="@font/rubik_regular"
                android:textColor="@color/white"
               >
            </androidx.appcompat.widget.AppCompatButton>


        </LinearLayout>
    </LinearLayout>



</androidx.cardview.widget.CardView>