<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:background="@color/white">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <RelativeLayout
        android:id="@+id/relative_ad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Nested RelativeLayout -->
        <RelativeLayout
            android:id="@+id/bannerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible">

            <TextView
                android:id="@+id/txt_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="@color/white"
                android:layout_centerInParent="true"/>

            <LinearLayout
                android:id="@+id/banner_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_50sdp"
                android:orientation="horizontal"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <!-- FrameLayout inside RelativeLayout -->
        <FrameLayout
            android:id="@+id/native_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_80sdp"
            android:layout_margin="3dp"
            android:visibility="invisible"
         />

    </RelativeLayout>

    <!-- LinearLayout at the bottom -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="bottom|center"
        app:layout_constraintTop_toBottomOf="@id/relative_ad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/relative_ad2">

        <ImageView
            android:layout_width="@dimen/_180sdp"
            android:layout_height="0dp"
            android:src="@drawable/splash_icon"
            android:layout_weight="1"
            android:id="@+id/img_splash"
            android:adjustViewBounds="true"
            android:contentDescription="@string/splash_image"/>


        <TextView
            android:id="@+id/text_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whats"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/rubik_bold"
            android:textSize="@dimen/_30ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:gravity="bottom|center"
            android:textColor="@color/bg_color"/>

        <TextView
            android:id="@+id/splash_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sticker_maker"
            android:fontFamily="@font/rubik_bold"
            android:includeFontPadding="false"
            android:textSize="@dimen/_22ssp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:gravity="bottom|center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/splash_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_your_own_stickers_in_minutes"
            android:textAlignment="center"
            android:fontFamily="@font/rubik_regular"
            android:textSize="@dimen/_12ssp"
            android:includeFontPadding="false"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:id="@+id/bottom_item"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_3sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:id="@+id/btn_get_started"
                android:visibility="gone"
                android:background="@drawable/splash_btn_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:text="@string/let_s_start"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_14ssp"
                    />

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/arrow_left" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/bg_color" />
        </RelativeLayout>

        <TextView
            android:id="@+id/contain_Ads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contain_Ad"
            android:textSize="@dimen/_8sdp"
            android:textColor="@color/grey"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_5sdp"
            android:visibility="invisible"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_ad2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:minHeight="@dimen/_70sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="bottom"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Nested RelativeLayout -->
        <RelativeLayout
            android:id="@+id/bannerLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/txt_banner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="@color/black"
                android:layout_centerInParent="true"/>

            <LinearLayout
                android:id="@+id/banner_area2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_50sdp"
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                android:layout_marginVertical="@dimen/_2sdp"/>
        </RelativeLayout>

        <!-- FrameLayout inside RelativeLayout -->
        <FrameLayout
            android:id="@+id/native_container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:visibility="invisible" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
