<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="@dimen/_280sdp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/exit_bottom_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/exit_btn_bg"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:text="@string/exit_desc"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/exit_text"/>

        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/img_exit"
            android:adjustViewBounds="true"
            android:src="@drawable/exit_icon_1" />

        <LinearLayout
            android:id="@+id/linear_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/star_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star_check" />

            <ImageView
                android:id="@+id/star_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/star_check"
                app:layout_constraintBottom_toBottomOf="@id/star_1"
                app:layout_constraintStart_toEndOf="@id/star_1"
                app:layout_constraintTop_toTopOf="@id/star_1" />

            <ImageView
                android:id="@+id/star_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/star_check"
                app:layout_constraintBottom_toBottomOf="@id/star_2"
                app:layout_constraintStart_toEndOf="@id/star_2"
                app:layout_constraintTop_toTopOf="@id/star_2" />


            <ImageView
                android:id="@+id/star_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/star_check"
                app:layout_constraintBottom_toBottomOf="@id/star_3"
                app:layout_constraintStart_toEndOf="@id/star_3"
                app:layout_constraintTop_toTopOf="@id/star_3" />

            <ImageView
                android:id="@+id/star_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/star_check"
                app:layout_constraintBottom_toBottomOf="@id/star_4"
                app:layout_constraintStart_toEndOf="@id/star_4"
                app:layout_constraintTop_toTopOf="@id/star_4" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/black"
            android:text="@string/exit_text_2" />


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:id="@+id/btn_continue"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/rubik_medium"
            android:textSize="@dimen/_14sdp"
            android:text="@string/close"
            android:background="@drawable/gradient_btn"/>


    </LinearLayout>
</androidx.cardview.widget.CardView>
